crates/cli/tests/snapshots/lib__check@cant_instantiate_function_ref.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/cant_instantiate_function_ref.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/cant_instantiate_function_ref.nemo
---
success: false
exit_code: 1
----- stdout -----
[05] Error: Unknown variable id
   ╭─[ tests/check/cant_instantiate_function_ref.nemo:6:15 ]
   │
 6 │   let my_id = id;
   │               ─┬  
   │                ╰── Unknown variable id
───╯

[21] Error: Can't instantiate function reference. Only top-level functions may be polymorphic at this time.
   ╭─[ tests/check/cant_instantiate_function_ref.nemo:7:3 ]
   │
 7 │   my_id#[I32](10)
   │   ──┬──  
   │     ╰──── Can't instantiate function reference. Only top-level functions may be polymorphic at this time.
───╯


----- stderr -----
No func refs for polymorphic functions yet. Allow instantiate in the future?
Error: "Check failed with 2 errors"
